# log-processing-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/log_processing_demo/: __main__.py  database.py  log_receiver.py  log_updater.py  sort.py
tests/: conftest.py  test_database.db  test_database.py  test_log_receiver.py  test_sort.py
