[tool.poetry]
name = "log-processing-demo"
version = "0.1.0"
description = "LOG processing demo."
authors = ["Simon Weiss <wonder@simonweiss.space>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
ipython = "^7.19.0"
ipdb = "^0.13.4"
ptpython = "^3.0.16"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
